# PicoTemplate

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  configure.sh  docker-build.sh  docker-run.sh  flash.sh
.github/workflows/: build.yaml
src/: main.cpp
templates/: picomain.cpp  picowmain.cpp
templates/Pico/: CMakeLists.txt  main.cpp
templates/PicoW/: CMakeLists.txt  main.cpp
